--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -2,16 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 200,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import UtilFunctions as util_f"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +42,12 @@
     "        return self.non_terminal_arr\n",
     "    \n",
     "    def only_right_side_of_non_terminals(self, production):\n",
-    "        return list(filter(lambda x: x in self.non_terminal_arr, production.right_side)) == production.right_side\n",
+    "        only_non_terminals = True\n",
+    "        for symbol in production.right_side:\n",
+    "            if not self.is_non_terminal(symbol):\n",
+    "                only_non_terminals = False\n",
+    "                break\n",
+    "        return only_non_terminals\n",
     "    \n",
     "    def production_has_null_sequence_on_right_side(self, production):\n",
     "        return production.right_side[0] == self.null_sequence_symbol\n",
@@ -79,28 +75,57 @@
     "                break\n",
     "        return in_productions\n",
     "    \n",
-    "    def get_nullable_non_terminals(self):\n",
-    "        productions = list(filter(lambda p: not p.left_side in p.right_side, self.production_arr))\n",
-    "        nullable_non_terminals = self.get_non_terminal_set_from_productions(list(\n",
-    "            filter(lambda p: self.production_has_null_sequence_on_right_side(p), productions)))\n",
-    "        suspected_p = list(filter(lambda p:  self.only_right_side_of_non_terminals(p) , productions))\n",
-    "        no_nullables_non_terminals = self.get_non_terminal_set_from_productions(list(filter(\n",
-    "            lambda p: not (self.production_has_null_sequence_on_right_side(p) or\n",
-    "                           self.only_right_side_of_non_terminals(p) or \n",
-    "                           self.non_terminal_in_productions_left_side(p.left_side, suspected_p) or\n",
-    "                           p.left_side in list(nullable_non_terminals)),\n",
-    "            productions)))\n",
-    "        while suspected_p:\n",
-    "            for production in suspected_p:\n",
-    "                if set(self.non_terminal_arr).difference(nullable_non_terminals, no_nullables_non_terminals) == set():\n",
-    "                    suspected_p = None\n",
+    "    def get_nullables_base_case(self):\n",
+    "        nullables = set()\n",
+    "        for production in self.production_arr:\n",
+    "            if self.production_has_null_sequence_on_right_side(production):\n",
+    "                nullables.add(production.left_side)\n",
+    "        return nullables\n",
+    "    \n",
+    "    def get_suspected_productions(self, nullable_non_terminals, no_nullable_non_terminals):\n",
+    "        suspected_productions = []\n",
+    "        for production in self.production_arr:\n",
+    "            if (self.only_right_side_of_non_terminals(production) and not production.left_side in nullable_non_terminals and\n",
+    "                not production.left_side in no_nullable_non_terminals):\n",
+    "                suspected_productions.append(production)\n",
+    "        return suspected_productions\n",
+    "    \n",
+    "    def get_suspected_non_terminals(self, suspected_productions):\n",
+    "        suspected_non_terminals = set()\n",
+    "        for non_terminal in self.non_terminal_arr:\n",
+    "            for production in suspected_productions:\n",
+    "                if production.left_side == non_terminal:\n",
+    "                    suspected_non_terminals.add(non_terminal)\n",
     "                    break\n",
-    "                if not self.non_terminals_can_not_be_nullable(production.right_side, list(no_nullables_non_terminals)):\n",
-    "                    no_nullables_non_terminals.add(production.left_side)\n",
-    "                    suspected_p.remove(production)\n",
-    "                elif set(production.right_side).difference(nullable_non_terminals) == set():\n",
+    "        return suspected_non_terminals\n",
+    "    \n",
+    "    def get_no_nullable_non_terminals(self, nullable_non_terminals, suspected_non_terminals):\n",
+    "        no_nullable_non_terminals = set()\n",
+    "        for non_terminal in self.non_terminal_arr:\n",
+    "            if not non_terminal in nullable_non_terminals and not non_terminal in suspected_non_terminals:\n",
+    "                no_nullable_non_terminals.add(non_terminal)\n",
+    "        return no_nullable_non_terminals\n",
+    "    \n",
+    "    def get_nullable_non_terminals(self):\n",
+    "        nullable_non_terminals = self.get_nullables_base_case()\n",
+    "        suspected_p = self.get_suspected_productions(nullable_non_terminals, set())\n",
+    "        suspected_non_terminals = self.get_suspected_non_terminals(suspected_p)\n",
+    "        no_nullable_non_terminals = self.get_no_nullable_non_terminals(nullable_non_terminals, suspected_non_terminals)\n",
+    "        while suspected_non_terminals:\n",
+    "            for production in suspected_p:\n",
+    "                all_nullables = True\n",
+    "                for symbol in production.right_side:\n",
+    "                    if symbol in no_nullable_non_terminals:\n",
+    "                        no_nullable_non_terminals.add(production.left_side)\n",
+    "                        all_nullables = False\n",
+    "                        break\n",
+    "                    if symbol in suspected_non_terminals:\n",
+    "                        all_nullables = False\n",
+    "                        break\n",
+    "                if all_nullables:\n",
     "                    nullable_non_terminals.add(production.left_side)\n",
-    "                    suspected_p.remove(production)\n",
+    "            suspected_p = self.get_suspected_productions(nullable_non_terminals, no_nullable_non_terminals)\n",
+    "            suspected_non_terminals = self.get_suspected_non_terminals(suspected_p)                         \n",
     "        return nullable_non_terminals\n",
     "    \n",
     "    def right_side_is_nullable(self, right_side, nullable_non_terminals):\n",
@@ -242,30 +267,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'<E>', '<D>', '<B>'}\n",
-      "[2, 6, 8]\n",
-      "[['<A>', {'b', 'a', 'e'}], ['<B>', {'b'}], ['<C>', {'c', 'd', 'e'}], ['<D>', {'e'}], ['<E>', {'b', 'f', 'e'}]]\n",
-      "[{'a'}, {'b', 'e'}, set(), {'b'}, {'c'}, {'d', 'e'}, set(), {'e'}, {'b', 'e'}, {'f'}]\n",
-      "[['<A>', {'d', 'c', '!', 'b', 'e'}], ['<B>', {'d', 'c', '!', 'b', 'e'}], ['<C>', {'d', 'c', '!', 'b', 'e'}], ['<D>', {'b', 'd'}], ['<E>', {'b', 'd'}]]\n",
-      "[['<A>', {'d', 'c', '!', 'b', 'e'}], ['<B>', {'d', 'c', '!', 'b', 'e'}], ['<C>', {'d', 'c', '!', 'b', 'e'}], ['<D>', {'b', 'd'}], ['<E>', {'b', 'd'}]]\n"
+      "nullable_non_terminals {'<D>', '<S>', '<P>'}\n",
+      "nullable_productions [0, 2, 4]\n",
+      "set_of_firsts_for_non_terminals [['<P>', {'x', 'b', 'a'}], ['<D>', {'a'}], ['<S>', {'x', 'b'}], ['<V>', {'(', 'b'}], ['<W>', {'[', 'c'}], ['<A>', {'x', 'b'}]]\n",
+      "set_of_firsts_for_productions [{'x', 'b', 'a'}, {'a'}, set(), {'x', 'b'}, set(), {'b'}, {'('}, {'c'}, {'['}, {'b'}, {'x'}]\n",
+      "set_of_nexts [['<P>', {']', 'z', '!'}], ['<D>', {')', '!', 'x', 'b', ']', 'z'}], ['<S>', {']', 'z', '!'}], ['<V>', {'a', ')', '!', 'x', 'b', ']', 'z'}], ['<W>', {'a', ')', '!', 'x', 'b', ']', 'z'}], ['<A>', {'!', 'x', 'b', ']', 'z'}]]\n",
+      "selection_set [{'a', '!', 'x', 'b', ']', 'z'}, {'a'}, {')', '!', 'x', 'b', ']', 'z'}, {'x', 'b'}, {']', 'z', '!'}, {'b'}, {'('}, {'c'}, {'['}, {'b'}, {'x'}]\n"
      ]
     }
    ],
    "source": [
-    "p = [Production('<A>', ['a', '<B>', '<C>']), Production('<A>', ['<D>', 'b', '<A>']), Production('<B>', ['%'] ),\n",
-    "    Production('<B>', ['b', '<A>', '<B>']), Production('<C>', ['c', '<C>']), Production('<C>', ['<D>', 'd', '<B>']),\n",
-    "    Production('<D>', ['%']), Production('<D>', ['e', '<E>']), Production('<E>', ['<B>', '<D>']), Production('<E>', ['f'])]\n",
-    "\n",
-    "p1 = [Production('<S>', ['<A>', '<S>', '<B>']), Production('<S>', ['a']), Production('<A>', ['a', '<A>']),\n",
-    "      Production('<A>', ['%']), Production('<B>', ['b', '<B>']), Production('<B>', ['%'])]\n",
-    "p_set = ProductionSet('<A>','%', '!', p, ['<A>', '<B>', '<C>', '<D>', '<E>'])\n",
+    "p = [Production('<P>', ['<D>', '<S>']), Production('<D>', ['a', '<V>', '<D>']), Production('<D>', ['%']),\n",
+    "Production('<S>', ['<A>', '<S>']), Production('<S>', ['%']), Production('<V>', ['b', '<W>']),\n",
+    "Production('<V>', ['(', '<D>', ')', 'b', 'c']), Production('<W>', ['c']), Production('<W>', ['[', '<P>', ']', 'c']),\n",
+    "Production('<A>', ['b', 'c']), Production('<A>', ['x', '<P>', 'z'])]\n",
+    "p_set = ProductionSet('<P>','%', '!', p, ['<P>', '<D>', '<S>', '<V>', '<W>', '<A>'])\n",
     "nullable_non_terminals = p_set.get_nullable_non_terminals()\n",
     "nullable_productions = p_set.get_nullable_productions(nullable_non_terminals)\n",
     "set_of_firsts_for_non_terminals = p_set.replace_non_terminals(p_set.get_firsts_base_cases(nullable_non_terminals))\n",
@@ -273,53 +296,13 @@
     "set_of_nexts = p_set.replace_non_terminals(p_set.get_nexts_base_cases(nullable_non_terminals,\n",
     "                                                                                        set_of_firsts_for_non_terminals))\n",
     "selection_set = p_set.get_set_of_selection_for_productions(nullable_productions, set_of_firsts_for_productions, set_of_nexts)\n",
-    "print(nullable_non_terminals)\n",
-    "print(nullable_productions)\n",
-    "print(set_of_firsts_for_non_terminals)\n",
-    "print(set_of_firsts_for_productions)\n",
-    "print(set_of_nexts)\n",
-    "print(set_of_nexts)"
+    "print('nullable_non_terminals', nullable_non_terminals)\n",
+    "print('nullable_productions', nullable_productions)\n",
+    "print('set_of_firsts_for_non_terminals', set_of_firsts_for_non_terminals)\n",
+    "print('set_of_firsts_for_productions', set_of_firsts_for_productions)\n",
+    "print('set_of_nexts', set_of_nexts)\n",
+    "print('selection_set', selection_set)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 204,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 205,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False True\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(not 'a', 'b' in ['a', 'b', 'c']) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
