--- a/Untitled2.ipynb
+++ b/Untitled2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,13 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "class PDACreator:\n",
     "    def __init__(self, end_of_sequence_symbol, null_sequence_symbol, empty_PDA_symbol, initial_non_terminal,\n",
-    "                 non_terminals, productions, state_operation, stack_operations):\n",
+    "                 non_terminals, productions, state_operation, stack_operations, selection_set):\n",
     "        self.end_of_sequence_symbol = end_of_sequence_symbol\n",
     "        self.null_sequence_symbol = null_sequence_symbol\n",
     "        self.empty_PDA_symbol = empty_PDA_symbol\n",
@@ -27,6 +27,7 @@
     "        self.productions = productions\n",
     "        self.state_operation = state_operation\n",
     "        self.stack_operations = stack_operations\n",
+    "        self.selection_set = selection_set\n",
     "        \n",
     "    def is_non_terminal(self, symbol):\n",
     "        return symbol in self.non_terminals\n",
@@ -43,6 +44,12 @@
     "            if production.left_side == non_terminal and not production in productions_same_l_side:\n",
     "                productions_same_l_side.append(production)\n",
     "        return productions_same_l_side\n",
+    "    \n",
+    "    def get_productions_number_same_non_terminal_l_side(self, productions_same_l_side):\n",
+    "        productions_number_same_l_side = []\n",
+    "        for production in productions_same_l_side:\n",
+    "            productions_number_same_l_side.append(self.productions.index(production))\n",
+    "        return productions_number_same_l_side\n",
     "    \n",
     "    def get_productions_start_with_terminal(self, terminal, productions):\n",
     "        productions_start_with_terminal = []\n",
@@ -79,6 +86,61 @@
     "                    break\n",
     "        return s_grammar\n",
     "    \n",
+    "    def selection_sets_are_disjoint(self, production_numbers):\n",
+    "        disjoint = True\n",
+    "        current_set = self.selection_set[production_numbers[0]]\n",
+    "        index = 1\n",
+    "        while(index < len(production_numbers)):\n",
+    "            current_set = current_set.intersection(self.selection_set[production_numbers[number]])\n",
+    "            if current_set != set():\n",
+    "                disjoint = False\n",
+    "                break\n",
+    "            index += 1\n",
+    "        for number in production_numbers:\n",
+    "            current_set = current_set.intersection(self.selection_set[production_numbers[number]])\n",
+    "            if current_set != set():\n",
+    "                disjoint = False\n",
+    "                break\n",
+    "        return disjoint\n",
+    "    \n",
+    "    def get_selection_sets_not_disjoint(self, production_numbers):\n",
+    "        sets = set()\n",
+    "        for number in production_numbers:\n",
+    "            index = production_numbers.index(production_numbers[number])+1\n",
+    "            current_set = self.selection_set[number]\n",
+    "            while(index < len(production_numbers)):\n",
+    "                current_set = current_set.intersection(self.selection_set[production_numbers[index]])\n",
+    "                if current_set != set():\n",
+    "                    sets.add(number)\n",
+    "                    sets.add(index)\n",
+    "                current_set = self.selection_set[number]\n",
+    "                index +=1\n",
+    "        return list(sets)\n",
+    "    \n",
+    "    def is_q_grammar(self):\n",
+    "        q_grammar = (0, None)\n",
+    "        for non_terminal in self.non_terminals:\n",
+    "            terminals = []\n",
+    "            productions_same_non_terminal_l_side = self.get_productions_same_non_terminal_l_side(non_terminal)\n",
+    "            productions_number_same_l_side = self.get_productions_number_same_non_terminal_l_side(\n",
+    "            productions_same_non_terminal_l_side)\n",
+    "            print(productions_number_same_l_side)\n",
+    "            if not self.selection_sets_are_disjoint(productions_number_same_l_side):\n",
+    "                q_grammar = (1, self.get_selection_sets_not_disjoint(productions_number_same_l_side))\n",
+    "                break\n",
+    "            for production in productions_same_non_terminal_l_side:\n",
+    "                if self.is_terminal(production.right_side[0]):\n",
+    "                    if not production.right_side[0] in terminals:\n",
+    "                        terminals.append(production.right_side[0])\n",
+    "                    else:\n",
+    "                        q_grammar = (2, self.get_productions_start_with_terminal(production.right_side[0],\n",
+    "                                                                                 productions_same_non_terminal_l_side))\n",
+    "                        break\n",
+    "                else:\n",
+    "                    if self.is_non_terminal(production.right_side[0]):\n",
+    "                        q_grammar = (3, production) # production starts with non_terminal\n",
+    "        return q_grammar\n",
+    "    \n",
     "    def get_input_symbols_PDA(self):\n",
     "        input_symbols = []\n",
     "        for production in self.productions:\n",
@@ -113,6 +175,13 @@
     "                break\n",
     "        return transition\n",
     "                \n",
+    "    def transition_null_sequence_x_in_selection_p(self, production_numbers, symbol):\n",
+    "        transition = True\n",
+    "        for number in production_numbers:\n",
+    "            if not symbol in list(self.selection_set[number]):\n",
+    "                transition = False\n",
+    "                break\n",
+    "        return transition\n",
     "    \n",
     "    def get_transition_table_s_grammar(self, symbols_in_PDA, input_symbols_PDA):\n",
     "        table = []\n",
@@ -145,36 +214,39 @@
     "    \n",
     "    def create_PDA(self):\n",
     "        push_down_automata = None\n",
+    "        input_symbols = self.get_input_symbols_PDA()\n",
+    "        symbols_in_PDA = self.get_symbols_in_PDA()\n",
+    "        initial_configuration = self.get_initial_configuration_PDA()\n",
     "        if self.is_s_grammar()[0] == 0:\n",
-    "            input_symbols = self.get_input_symbols_PDA()\n",
-    "            symbols_in_PDA = self.get_symbols_in_PDA()\n",
-    "            initial_configuration = self.get_initial_configuration_PDA()\n",
     "            transition_table = self.get_transition_table_s_grammar(symbols_in_PDA, input_symbols)\n",
     "            push_down_automata = PDA.PushDownAutomaton(input_symbols, self.end_of_sequence_symbol, 'A', 'R', ['S0'], 'S0',\n",
     "                                                      initial_configuration, transition_table )\n",
+    "        else:\n",
+    "            print('is not s grammar')\n",
+    "        if self.is_q_grammar()[0] == 0:\n",
+    "            print('is q grammar')\n",
+    "        else:\n",
+    "            print('is not q grammar')\n",
+    "            print(self.is_q_grammar()[0])\n",
     "        \n",
     "        return push_down_automata"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['1', '0', '2', '!']\n",
-      "['1', '<B>', '0', '<A>', '$', '<S>']\n",
-      "['$', '<S>']\n",
-      "1( #0 R R R )\n",
-      "<B>( #1 R #2 R )\n",
-      "0( R #3 R R )\n",
-      "<A>( #4 R #5 R )\n",
-      "$( R R R A )\n",
-      "<S>( #6 R #7 R )\n",
-      "True\n"
+      "is not s grammar\n",
+      "[0, 1]\n",
+      "is not q grammar\n",
+      "[0, 1]\n",
+      "1\n",
+      "[{'a'}, {'b'}, {'a'}, {'b'}, {'a'}, {'b'}, {'c', '!'}]\n"
      ]
     }
    ],
@@ -182,17 +254,25 @@
     "end_of_sequence_symbol = '!'\n",
     "null_sequence_symbol = '%'\n",
     "empty_PDA_symbol = '$'\n",
-    "initial_non_terminal = '<S>'\n",
-    "non_terminals = ['<S>', '<A>', '<B>']\n",
-    "p = [ns.Production('<S>', ['1', '<A>', '0']), ns.Production('<S>', ['2', '1', '<B>', '0', '0']),\n",
-    "ns.Production('<A>', ['1', '<A>', '0']), ns.Production('<A>', ['2']), ns.Production('<B>', ['1', '<B>', '0', '0']),\n",
-    "ns.Production('<B>', ['2'])]\n",
+    "initial_non_terminal = '<A>'\n",
+    "non_terminals = ['<A>', '<B>', '<C>']\n",
+    "p = [ns.Production('<A>', ['a', '<C>']), ns.Production('<A>', ['b', '<B>', 'c']), ns.Production('<B>', ['a', '<A>']),\n",
+    "ns.Production('<B>', ['b', '<B>']), ns.Production('<C>', ['a', '<C>', 'c']), ns.Production('<C>', ['b', '<B>', 'c', 'c']),\n",
+    "ns.Production('<C>', ['%'])]\n",
     "state_operation = PDA.StateOperation(['S0'], ['S0'])\n",
     "stack_operations = PDA.StackOperation()\n",
+    "p_set = ns.ProductionSet(initial_non_terminal, null_sequence_symbol, end_of_sequence_symbol, p, non_terminals)\n",
+    "nullable_non_terminals = p_set.get_nullable_non_terminals()\n",
+    "nullable_productions = p_set.get_nullable_productions(nullable_non_terminals)\n",
+    "set_of_firsts_for_non_terminals = p_set.replace_non_terminals(p_set.get_firsts_base_cases(nullable_non_terminals))\n",
+    "set_of_firsts_for_productions = p_set.get_set_of_firsts_for_productions(nullable_non_terminals, set_of_firsts_for_non_terminals)\n",
+    "set_of_nexts = p_set.replace_non_terminals(p_set.get_nexts_base_cases(nullable_non_terminals,\n",
+    "                                                                                        set_of_firsts_for_non_terminals))\n",
+    "selection_set = p_set.get_set_of_selection_for_productions(nullable_productions, set_of_firsts_for_productions, set_of_nexts)\n",
     "pda_creator = PDACreator(end_of_sequence_symbol, null_sequence_symbol, empty_PDA_symbol, initial_non_terminal, non_terminals,\n",
-    "                        p, state_operation, stack_operations)\n",
+    "                        p, state_operation, stack_operations, selection_set)\n",
     "pda = pda_creator.create_PDA()\n",
-    "print(pda.belongs_to_language(['2', '1', '1', '2', '0', '0', '0', '0', '!']))"
+    "print(selection_set)"
    ]
   },
   {
