--- a/Untitled2.ipynb
+++ b/Untitled2.ipynb
@@ -2,30 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
     "import NecessarySets as ns\n",
-    "import PDA"
+    "import pda"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
     "class PDACreator:\n",
     "    def __init__(self, end_of_sequence_symbol, null_sequence_symbol, empty_PDA_symbol, initial_non_terminal,\n",
-    "                 non_terminals, productions, state_operation, stack_operations, selection_set):\n",
+    "                 non_terminals, productions, stack_operations, selection_set):\n",
     "        self.end_of_sequence_symbol = end_of_sequence_symbol\n",
     "        self.null_sequence_symbol = null_sequence_symbol\n",
     "        self.empty_PDA_symbol = empty_PDA_symbol\n",
     "        self.initial_non_terminal = initial_non_terminal\n",
     "        self.non_terminals = non_terminals\n",
     "        self.productions = productions\n",
-    "        self.state_operation = state_operation\n",
     "        self.stack_operations = stack_operations\n",
     "        self.selection_set = selection_set\n",
     "        \n",
@@ -91,16 +90,11 @@
     "        current_set = self.selection_set[production_numbers[0]]\n",
     "        index = 1\n",
     "        while(index < len(production_numbers)):\n",
-    "            current_set = current_set.intersection(self.selection_set[production_numbers[number]])\n",
+    "            current_set = current_set.intersection(self.selection_set[production_numbers[index]])\n",
     "            if current_set != set():\n",
     "                disjoint = False\n",
     "                break\n",
     "            index += 1\n",
-    "        for number in production_numbers:\n",
-    "            current_set = current_set.intersection(self.selection_set[production_numbers[number]])\n",
-    "            if current_set != set():\n",
-    "                disjoint = False\n",
-    "                break\n",
     "        return disjoint\n",
     "    \n",
     "    def get_selection_sets_not_disjoint(self, production_numbers):\n",
@@ -124,7 +118,6 @@
     "            productions_same_non_terminal_l_side = self.get_productions_same_non_terminal_l_side(non_terminal)\n",
     "            productions_number_same_l_side = self.get_productions_number_same_non_terminal_l_side(\n",
     "            productions_same_non_terminal_l_side)\n",
-    "            print(productions_number_same_l_side)\n",
     "            if not self.selection_sets_are_disjoint(productions_number_same_l_side):\n",
     "                q_grammar = (1, self.get_selection_sets_not_disjoint(productions_number_same_l_side))\n",
     "                break\n",
@@ -168,63 +161,98 @@
     "            if len(production.right_side) >= 2:\n",
     "                alpha = production.right_side[1:]\n",
     "                alpha.reverse()\n",
-    "                transition = PDA.Transition(None, self.stack_operations.replace_generator(alpha), self.state_operation, True)\n",
+    "                transition = pda.Transition(None, self.stack_operations.replace_generator(alpha), True)\n",
     "                break\n",
     "            else:\n",
-    "                transition = PDA.Transition(None, self.stack_operations.pop_generator(), self.state_operation, True)\n",
+    "                transition = pda.Transition(None, self.stack_operations.pop_generator(), True)\n",
     "                break\n",
     "        return transition\n",
     "                \n",
-    "    def transition_null_sequence_x_in_selection_p(self, production_numbers, symbol):\n",
-    "        transition = True\n",
+    "    def production_null_sequence_x_in_selection_p(self, production_numbers, symbol):\n",
+    "        x_in_selection_p = False\n",
     "        for number in production_numbers:\n",
-    "            if not symbol in list(self.selection_set[number]):\n",
-    "                transition = False\n",
+    "            if symbol in list(self.selection_set[number]):\n",
+    "                x_in_selection_p = True\n",
     "                break\n",
-    "        return transition\n",
+    "        return x_in_selection_p\n",
     "    \n",
     "    def get_transition_table_s_grammar(self, symbols_in_PDA, input_symbols_PDA):\n",
     "        table = []\n",
     "        n = 0\n",
     "        for symbol in symbols_in_PDA:\n",
     "            transitions = []\n",
-    "            transition = None\n",
     "            for input_symbol in input_symbols_PDA:\n",
-    "                transition = self.transition_production_terminal_alpha(self.get_productions_start_with_terminal(\n",
-    "                input_symbol, self.get_productions_same_non_terminal_l_side(symbol)))\n",
-    "                if transition:\n",
-    "                    transition.name = '#' + str(n)\n",
-    "                    transitions.append(transition)\n",
-    "                    n += 1\n",
-    "                    continue\n",
+    "                if self.is_non_terminal(symbol):\n",
+    "                    transition = self.transition_production_terminal_alpha(self.get_productions_start_with_terminal(\n",
+    "                        input_symbol, self.get_productions_same_non_terminal_l_side(symbol)))\n",
+    "                    if transition:\n",
+    "                        transition.name = '#' + str(n)\n",
+    "                        transitions.append(transition)\n",
+    "                        n += 1\n",
+    "                        continue\n",
     "                elif self.is_terminal(symbol) and symbol == input_symbol:\n",
-    "                    transition = PDA.Transition('#' + str(n), self.stack_operations.pop_generator(), self.state_operation, True)\n",
+    "                    transition = pda.Transition('#' + str(n), self.stack_operations.pop_generator(), True)\n",
     "                    transitions.append(transition)\n",
     "                    n += 1\n",
     "                    continue\n",
     "                elif symbol == self.empty_PDA_symbol and input_symbol == end_of_sequence_symbol:\n",
-    "                    transition = PDA.Transition('A', None, None, None)\n",
+    "                    transition = pda.Transition('A', None, None)\n",
     "                    transitions.append(transition)\n",
     "                    continue\n",
-    "                transition = PDA.Transition('R', None, None, None)\n",
+    "                transition = pda.Transition('R', None, None)\n",
     "                transitions.append(transition)\n",
     "            table.append(transitions)\n",
-    "        PDA.TransitionTable(symbols_in_PDA, input_symbols_PDA, 'S0', table).print_table()\n",
-    "        return [PDA.TransitionTable(symbols_in_PDA, input_symbols_PDA, 'S0', table)]\n",
+    "        return pda.TransitionTable(symbols_in_PDA, input_symbols_PDA, 'S0', table)\n",
+    "\n",
+    "    def get_transition_table_q_grammar(self, symbols_in_PDA, input_symbols_PDA):\n",
+    "        table = []\n",
+    "        n = 0\n",
+    "        for symbol in symbols_in_PDA:\n",
+    "            transitions = []\n",
+    "            for input_symbol in input_symbols_PDA:\n",
+    "                if self.is_non_terminal(symbol):\n",
+    "                    transition = self.transition_production_terminal_alpha(self.get_productions_start_with_terminal(\n",
+    "                        input_symbol, self.get_productions_same_non_terminal_l_side(symbol)))\n",
+    "                    if transition:\n",
+    "                        transition.name = '#' + str(n)\n",
+    "                        transitions.append(transition)\n",
+    "                        n += 1\n",
+    "                        continue\n",
+    "                    elif self.production_null_sequence_x_in_selection_p(self.get_productions_number_same_non_terminal_l_side(\n",
+    "                        self.get_productions_same_non_terminal_l_side(symbol)), input_symbol):\n",
+    "                        transition = pda.Transition('#' + str(n), self.stack_operations.pop_generator(), False)\n",
+    "                        transitions.append(transition)\n",
+    "                        n += 1\n",
+    "                        continue\n",
+    "                elif self.is_terminal(symbol) and symbol == input_symbol:\n",
+    "                    transition = pda.Transition('#' + str(n), self.stack_operations.pop_generator(), True)\n",
+    "                    transitions.append(transition)\n",
+    "                    n += 1\n",
+    "                    continue\n",
+    "                elif symbol == self.empty_PDA_symbol and input_symbol == end_of_sequence_symbol:\n",
+    "                    transition = pda.Transition('A', None, None)\n",
+    "                    transitions.append(transition)\n",
+    "                    continue\n",
+    "                transition = pda.Transition('R', None, None)\n",
+    "                transitions.append(transition)\n",
+    "            table.append(transitions)\n",
+    "        return pda.TransitionTable(symbols_in_PDA, input_symbols_PDA, 'S0', table)\n",
     "    \n",
     "    def create_PDA(self):\n",
     "        push_down_automata = None\n",
     "        input_symbols = self.get_input_symbols_PDA()\n",
     "        symbols_in_PDA = self.get_symbols_in_PDA()\n",
+    "        print(input_symbols)\n",
     "        initial_configuration = self.get_initial_configuration_PDA()\n",
     "        if self.is_s_grammar()[0] == 0:\n",
     "            transition_table = self.get_transition_table_s_grammar(symbols_in_PDA, input_symbols)\n",
-    "            push_down_automata = PDA.PushDownAutomaton(input_symbols, self.end_of_sequence_symbol, 'A', 'R', ['S0'], 'S0',\n",
-    "                                                      initial_configuration, transition_table )\n",
-    "        else:\n",
-    "            print('is not s grammar')\n",
+    "            transition_table.print_table()\n",
+    "            push_down_automata = pda.PushDownAutomaton(input_symbols, self.end_of_sequence_symbol, 'A', 'R',\n",
+    "                                                      initial_configuration, transition_table)\n",
     "        if self.is_q_grammar()[0] == 0:\n",
-    "            print('is q grammar')\n",
+    "            transition_table = self.get_transition_table_q_grammar(symbols_in_PDA, input_symbols)\n",
+    "            push_down_automata = pda.PushDownAutomaton(input_symbols, self.end_of_sequence_symbol, 'A', 'R',\n",
+    "                                                        initial_configuration, transition_table)\n",
     "        else:\n",
     "            print('is not q grammar')\n",
     "            print(self.is_q_grammar()[0])\n",
@@ -234,19 +262,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "is not s grammar\n",
-      "[0, 1]\n",
-      "is not q grammar\n",
-      "[0, 1]\n",
-      "1\n",
-      "[{'a'}, {'b'}, {'a'}, {'b'}, {'a'}, {'b'}, {'c', '!'}]\n"
+      "['1', '!']\n",
+      "True\n"
      ]
     }
    ],
@@ -254,13 +278,11 @@
     "end_of_sequence_symbol = '!'\n",
     "null_sequence_symbol = '%'\n",
     "empty_PDA_symbol = '$'\n",
-    "initial_non_terminal = '<A>'\n",
-    "non_terminals = ['<A>', '<B>', '<C>']\n",
-    "p = [ns.Production('<A>', ['a', '<C>']), ns.Production('<A>', ['b', '<B>', 'c']), ns.Production('<B>', ['a', '<A>']),\n",
-    "ns.Production('<B>', ['b', '<B>']), ns.Production('<C>', ['a', '<C>', 'c']), ns.Production('<C>', ['b', '<B>', 'c', 'c']),\n",
-    "ns.Production('<C>', ['%'])]\n",
-    "state_operation = PDA.StateOperation(['S0'], ['S0'])\n",
-    "stack_operations = PDA.StackOperation()\n",
+    "initial_non_terminal = '<S>'\n",
+    "non_terminals = ['<S>', '<A>']\n",
+    "p = [ns.Production('<S>', ['1', '<A>', '0', '<B>']), ns.Production('<A>', ['1', '<A>', '0']), ns.Production('<A>', ['%']),\n",
+    "ns.Production('<B>', ['0', '<B>']), ns.Production('<B>', ['%'])]\n",
+    "stack_operations = pda.StackOperation()\n",
     "p_set = ns.ProductionSet(initial_non_terminal, null_sequence_symbol, end_of_sequence_symbol, p, non_terminals)\n",
     "nullable_non_terminals = p_set.get_nullable_non_terminals()\n",
     "nullable_productions = p_set.get_nullable_productions(nullable_non_terminals)\n",
@@ -270,9 +292,10 @@
     "                                                                                        set_of_firsts_for_non_terminals))\n",
     "selection_set = p_set.get_set_of_selection_for_productions(nullable_productions, set_of_firsts_for_productions, set_of_nexts)\n",
     "pda_creator = PDACreator(end_of_sequence_symbol, null_sequence_symbol, empty_PDA_symbol, initial_non_terminal, non_terminals,\n",
-    "                        p, state_operation, stack_operations, selection_set)\n",
-    "pda = pda_creator.create_PDA()\n",
-    "print(selection_set)"
+    "                        p, stack_operations, selection_set)\n",
+    "push_down_automata = pda_creator.create_PDA()\n",
+    "\n",
+    "print(push_down_automata.belongs_to_language(['1', '1', '!']))"
    ]
   },
   {
