--- a/Untitled2.ipynb
+++ b/Untitled2.ipynb
@@ -262,14 +262,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['1', '!']\n",
+      "['1', '0', '!']\n",
       "True\n"
      ]
     }
@@ -279,7 +279,7 @@
     "null_sequence_symbol = '%'\n",
     "empty_PDA_symbol = '$'\n",
     "initial_non_terminal = '<S>'\n",
-    "non_terminals = ['<S>', '<A>']\n",
+    "non_terminals = ['<S>', '<A>', '<B>']\n",
     "p = [ns.Production('<S>', ['1', '<A>', '0', '<B>']), ns.Production('<A>', ['1', '<A>', '0']), ns.Production('<A>', ['%']),\n",
     "ns.Production('<B>', ['0', '<B>']), ns.Production('<B>', ['%'])]\n",
     "stack_operations = pda.StackOperation()\n",
@@ -295,7 +295,7 @@
     "                        p, stack_operations, selection_set)\n",
     "push_down_automata = pda_creator.create_PDA()\n",
     "\n",
-    "print(push_down_automata.belongs_to_language(['1', '1', '!']))"
+    "print(push_down_automata.belongs_to_language(['1', '0', '0', '!']))"
    ]
   },
   {
