--- a/Untitled2.ipynb
+++ b/Untitled2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,6 +80,7 @@
     "                else:\n",
     "                    if self.is_non_terminal(production.right_side[0]):\n",
     "                        s_grammar = (2, production) # production starts with non_terminal\n",
+    "                        break\n",
     "                    else:\n",
     "                        s_grammar = (3, production) # production is nullable\n",
     "                    break\n",
@@ -132,7 +133,19 @@
     "                else:\n",
     "                    if self.is_non_terminal(production.right_side[0]):\n",
     "                        q_grammar = (3, production) # production starts with non_terminal\n",
+    "                        break\n",
     "        return q_grammar\n",
+    "    \n",
+    "    def is_ll_grammar(self):\n",
+    "        ll_grammar = (0, None)\n",
+    "        for non_terminal in self.non_terminals:\n",
+    "            productions_same_non_terminal_l_side = self.get_productions_same_non_terminal_l_side(non_terminal)\n",
+    "            productions_number_same_l_side = self.get_productions_number_same_non_terminal_l_side(\n",
+    "            productions_same_non_terminal_l_side)\n",
+    "            if not self.selection_sets_are_disjoint(productions_number_same_l_side):\n",
+    "                ll_grammar = (1, self.get_selection_sets_not_disjoint(productions_number_same_l_side))\n",
+    "                break\n",
+    "        return ll_grammar\n",
     "    \n",
     "    def get_input_symbols_PDA(self):\n",
     "        input_symbols = []\n",
@@ -176,6 +189,14 @@
     "                break\n",
     "        return x_in_selection_p\n",
     "    \n",
+    "    def get_productions_type_beta(self, non_terminal):\n",
+    "        productions_type_beta = []\n",
+    "        productions_same_non_terminal = self.get_productions_same_non_terminal_l_side(non_terminal)\n",
+    "        for production in productions_same_non_terminal:\n",
+    "            if self.is_non_terminal(production.right_side[0]):\n",
+    "                productions_type_beta.append(self.productions.index(production))\n",
+    "        return productions_type_beta\n",
+    "        \n",
     "    def get_transition_table_s_grammar(self, symbols_in_PDA, input_symbols_PDA):\n",
     "        table = []\n",
     "        n = 0\n",
@@ -238,6 +259,57 @@
     "            table.append(transitions)\n",
     "        return pda.TransitionTable(symbols_in_PDA, input_symbols_PDA, 'S0', table)\n",
     "    \n",
+    "    def input_symbol_in_selection_set_of_production(self, production_indexes, input_symbol):\n",
+    "        production = None\n",
+    "        for index in production_indexes:\n",
+    "            if input_symbol in list(self.selection_set[index]):\n",
+    "                production = self.productions[index]\n",
+    "                break\n",
+    "        return production\n",
+    "\n",
+    "    def get_transition_table_ll_grammar(self, symbols_in_PDA, input_symbols_PDA):\n",
+    "        table = []\n",
+    "        n = 0\n",
+    "        for symbol in symbols_in_PDA:\n",
+    "            transitions = []\n",
+    "            for input_symbol in input_symbols_PDA:\n",
+    "                if self.is_non_terminal(symbol):\n",
+    "                    transition = self.transition_production_terminal_alpha(self.get_productions_start_with_terminal(\n",
+    "                        input_symbol, self.get_productions_same_non_terminal_l_side(symbol)))\n",
+    "                    if transition:\n",
+    "                        transition.name = '#' + str(n)\n",
+    "                        transitions.append(transition)\n",
+    "                        n += 1\n",
+    "                        continue\n",
+    "                    elif self.production_null_sequence_x_in_selection_p(self.get_productions_number_same_non_terminal_l_side(\n",
+    "                        self.get_productions_same_non_terminal_l_side(symbol)), input_symbol):\n",
+    "                        transition = pda.Transition('#' + str(n), self.stack_operations.pop_generator(), False)\n",
+    "                        transitions.append(transition)\n",
+    "                        n += 1\n",
+    "                        continue\n",
+    "                    productions_type_beta = self.get_productions_type_beta(symbol)\n",
+    "                    production = self.input_symbol_in_selection_set_of_production(productions_type_beta, input_symbol)\n",
+    "                    if productions_type_beta and production:\n",
+    "                        beta = production.right_side\n",
+    "                        beta.reverse()\n",
+    "                        transition = pda.Transition('#' + str(n), self.stack_operations.replace_generator(beta), False)\n",
+    "                        transitions.append(transition)\n",
+    "                        n += 1\n",
+    "                        continue\n",
+    "                elif self.is_terminal(symbol) and symbol == input_symbol:\n",
+    "                    transition = pda.Transition('#' + str(n), self.stack_operations.pop_generator(), True)\n",
+    "                    transitions.append(transition)\n",
+    "                    n += 1\n",
+    "                    continue\n",
+    "                elif symbol == self.empty_PDA_symbol and input_symbol == end_of_sequence_symbol:\n",
+    "                    transition = pda.Transition('A', None, None)\n",
+    "                    transitions.append(transition)\n",
+    "                    continue\n",
+    "                transition = pda.Transition('R', None, None)\n",
+    "                transitions.append(transition)\n",
+    "            table.append(transitions)\n",
+    "        return pda.TransitionTable(symbols_in_PDA, input_symbols_PDA, 'S0', table)\n",
+    "    \n",
     "    def create_PDA(self):\n",
     "        push_down_automata = None\n",
     "        input_symbols = self.get_input_symbols_PDA()\n",
@@ -249,6 +321,8 @@
     "            transition_table.print_table()\n",
     "            push_down_automata = pda.PushDownAutomaton(input_symbols, self.end_of_sequence_symbol, 'A', 'R',\n",
     "                                                      initial_configuration, transition_table)\n",
+    "        else:\n",
+    "            print('is not s grammar')\n",
     "        if self.is_q_grammar()[0] == 0:\n",
     "            transition_table = self.get_transition_table_q_grammar(symbols_in_PDA, input_symbols)\n",
     "            push_down_automata = pda.PushDownAutomaton(input_symbols, self.end_of_sequence_symbol, 'A', 'R',\n",
@@ -256,21 +330,37 @@
     "        else:\n",
     "            print('is not q grammar')\n",
     "            print(self.is_q_grammar()[0])\n",
+    "        if self.is_ll_grammar()[0] == 0:\n",
+    "            transition_table = self.get_transition_table_ll_grammar(symbols_in_PDA, input_symbols)\n",
+    "            push_down_automata = pda.PushDownAutomaton(input_symbols, self.end_of_sequence_symbol, 'A', 'R',\n",
+    "                                                        initial_configuration, transition_table)\n",
+    "            transition_table.print_table()\n",
+    "        else:\n",
+    "            print('is not LL grammar')\n",
     "        \n",
     "        return push_down_automata"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['1', '0', '!']\n",
-      "True\n"
+      "[{'b', 'c'}, {'a'}, {'b'}, {'d', 'c', '!'}, {'d'}, {'c', '!'}, {'a'}, {'d', 'b', 'c', '!'}]\n",
+      "['c', 'a', 'b', 'd', '!']\n",
+      "is not s grammar\n",
+      "is not q grammar\n",
+      "3\n",
+      "<B>( #0 R #1 #2 #3 )\n",
+      "$( R R R R A )\n",
+      "c( #4 R R R R )\n",
+      "<E>( #5 #6 #7 #8 #9 )\n",
+      "<D>( #10 R R #11 #12 )\n",
+      "<A>( #13 #14 #15 R R )\n"
      ]
     }
    ],
@@ -278,10 +368,11 @@
     "end_of_sequence_symbol = '!'\n",
     "null_sequence_symbol = '%'\n",
     "empty_PDA_symbol = '$'\n",
-    "initial_non_terminal = '<S>'\n",
-    "non_terminals = ['<S>', '<A>', '<B>']\n",
-    "p = [ns.Production('<S>', ['1', '<A>', '0', '<B>']), ns.Production('<A>', ['1', '<A>', '0']), ns.Production('<A>', ['%']),\n",
-    "ns.Production('<B>', ['0', '<B>']), ns.Production('<B>', ['%'])]\n",
+    "initial_non_terminal = '<A>'\n",
+    "non_terminals = ['<A>', '<B>', '<D>', '<E>']\n",
+    "p = [ns.Production('<A>', ['<B>', 'c', '<D>']), ns.Production('<A>', ['a', '<E>']), ns.Production('<B>', ['b', '<A>', 'c']),\n",
+    "ns.Production('<B>', ['%']), ns.Production('<D>', ['d', '<B>', '<D>', 'c']), ns.Production('<D>', ['%']),\n",
+    "ns.Production('<E>', ['a']), ns.Production('<E>', ['<B>', '<D>'])]\n",
     "stack_operations = pda.StackOperation()\n",
     "p_set = ns.ProductionSet(initial_non_terminal, null_sequence_symbol, end_of_sequence_symbol, p, non_terminals)\n",
     "nullable_non_terminals = p_set.get_nullable_non_terminals()\n",
@@ -291,11 +382,12 @@
     "set_of_nexts = p_set.replace_non_terminals(p_set.get_nexts_base_cases(nullable_non_terminals,\n",
     "                                                                                        set_of_firsts_for_non_terminals))\n",
     "selection_set = p_set.get_set_of_selection_for_productions(nullable_productions, set_of_firsts_for_productions, set_of_nexts)\n",
+    "print(selection_set)\n",
     "pda_creator = PDACreator(end_of_sequence_symbol, null_sequence_symbol, empty_PDA_symbol, initial_non_terminal, non_terminals,\n",
     "                        p, stack_operations, selection_set)\n",
     "push_down_automata = pda_creator.create_PDA()\n",
     "\n",
-    "print(push_down_automata.belongs_to_language(['1', '0', '0', '!']))"
+    "#print(push_down_automata.belongs_to_language(['1', '0', '0', '!']))"
    ]
   },
   {
