--- a/Untitled2.ipynb
+++ b/Untitled2.ipynb
@@ -343,14 +343,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'b', 'c'}, {'a'}, {'b'}, {'d', 'c', '!'}, {'d'}, {'c', '!'}, {'a'}, {'d', 'b', 'c', '!'}]\n",
       "['c', 'a', 'b', 'd', '!']\n",
       "is not s grammar\n",
       "is not q grammar\n",
@@ -360,7 +359,8 @@
       "c( #4 R R R R )\n",
       "<E>( #5 #6 #7 #8 #9 )\n",
       "<D>( #10 R R #11 #12 )\n",
-      "<A>( #13 #14 #15 R R )\n"
+      "<A>( #13 #14 #15 R R )\n",
+      "False\n"
      ]
     }
    ],
@@ -382,20 +382,12 @@
     "set_of_nexts = p_set.replace_non_terminals(p_set.get_nexts_base_cases(nullable_non_terminals,\n",
     "                                                                                        set_of_firsts_for_non_terminals))\n",
     "selection_set = p_set.get_set_of_selection_for_productions(nullable_productions, set_of_firsts_for_productions, set_of_nexts)\n",
-    "print(selection_set)\n",
     "pda_creator = PDACreator(end_of_sequence_symbol, null_sequence_symbol, empty_PDA_symbol, initial_non_terminal, non_terminals,\n",
     "                        p, stack_operations, selection_set)\n",
     "push_down_automata = pda_creator.create_PDA()\n",
     "\n",
-    "#print(push_down_automata.belongs_to_language(['1', '0', '0', '!']))"
+    "print(push_down_automata.belongs_to_language(['d', 'c', '!']))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
