--- a/Untitled2.ipynb
+++ b/Untitled2.ipynb
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
       "<E>( #5 #6 #7 #8 #9 )\n",
       "<D>( #10 R R #11 #12 )\n",
       "<A>( #13 #14 #15 R R )\n",
-      "False\n"
+      "True\n"
      ]
     }
    ],
@@ -386,8 +386,15 @@
     "                        p, stack_operations, selection_set)\n",
     "push_down_automata = pda_creator.create_PDA()\n",
     "\n",
-    "print(push_down_automata.belongs_to_language(['d', 'c', '!']))"
+    "print(push_down_automata.belongs_to_language(['a', 'a', '!']))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
